<resources>
    <string name="app_name">Dentulu Aligners</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dr">Dr.</string>
    <string name="successfull_screen_message">will email your personal assessment soon! We will text you when it is ready</string>
    <string name="na">NA</string>
    <string name="dash_ask_my_dentist">Photo Consultation</string>
    <string name="please_fill_required_data">Please answer all questions to proceed</string>
    <string name="please_select_atleast_one_option_to_proceed">Please select at least one option to proceed</string>
    <string name="take_photo_">Take Photo</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="no_forms_found">No forms found</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="user_name">User Name</string>
    <string name="user_email_id">user@gmail.com</string>
    <string name="user_code">#DENP00002</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_appointments">My Appointments</string>
    <string name="intra_oral_camera">Intraoral Camera</string>
    <string name="chat">Chat</string>
    <string name="shop">Shop</string>
    <string name="notification">Notifications</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="btm_home">Home</string>
    <string name="btm_my_appointment">Appointments</string>
    <string name="btm_booking"></string>
    <string name="btm_notification">Notifications</string>
    <string name="btm_my_account">My Account</string>
    <string name="login_register">LOGIN &amp; REGISTER</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dentist_touch_here">If you are a Dentist, touch here</string>
    <string name="daily_news">Daily News &amp; Updates</string>
    <string name="add_find_dentist">Add/Find\nMy Dentist</string>
    <string name="intra_oral">Intraoral Camera</string>
    <string name="home_chat">Chat</string>
    <string name="home_shop">Shop</string>
    <string name="new_user"><u>New User</u></string>
    <string name="forget_pwd"><u>Forget Password</u></string>
    <string name="hint_email">Email ID</string>
    <string name="hint_pwd">Password</string>
    <string name="title_login">LOGIN</string>
    <string name="title_appointment_list">Appointments</string>
    <string name="tab_video_virtual">VIRTUAL VIDEO\n APPOINTMENTS</string>
    <string name="tab_photo_consultation">PHOTO \n CONSULTATIONS</string>
    <string name="tray_minder_tab">FITS \n REMINDERS</string>
    <string name="no_appointment_yet">No Appointments Yet</string>
    <string name="appointment_id">Appointment ID</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="status_of_consult">Status of consult</string>
    <string name="call_duration">Call Duration</string>
    <string name="created_on">Created On</string>
    <string name="completed">Completed</string>
    <string name="date">Jun 24, 2020 04:08 PM</string>
    <string name="duration">01:23</string>
    <string name="id">456979659546</string>
    <string name="view_full_details"><u>View Full Details</u></string>
    <string name="doc_name">Dr Jackson</string>
    <string name="consultation_id">Consultation ID</string>
    <string name="patient_name">Patient name</string>
    <string name="patient_name_photo">Name</string>
    <string name="status_of_consul">Status</string>
    <string name="consultation_sent">Consultation Sent</string>
    <string name="photo_con_id">#CONSU000166</string>
    <string name="patient_photo_name">Varun pawar</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="services">Services</string>
    <string name="call_durations">Call Duration</string>
    <string name="dentist_name">Dentist\'s Name</string>
    <string name="discount_cost">Discount</string>
    <string name="total_cost">Service Charge</string>
    <string name="mins_value">Mins</string>
    <string name="virtual_appointment">Virtual appointment</string>
    <string name="dollar">$200</string>
    <string name="discount_dollar">$0</string>
    <string name="discount_dollar_">$0.00</string>
    <string name="amount">$55</string>
    <string name="paisa">00</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="book_photo_consultation">Book Photo Consultation</string>
    <string name="book_virtual_appointment">Book Virtual Appointment</string>
    <string name="title_consultations">Photo Consultations</string>
    <string name="patient_information">Patient Information</string>
    <string name="lbl_patient_name">Patient Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_number">Phone Number</string>
    <string name="lbl_response">Patient Response</string>
    <string name="lbl_patient_images_videos">Patient Images or Videos</string>
    <string name="lbl_teeth_images">Teeth Images</string>
    <string name="lbl_front">Front</string>
    <string name="lbl_left">Left</string>
    <string name="lbl_right">Right</string>
    <string name="lbl_top">Top</string>
    <string name="lbl_bottom">Bottom</string>
    <string name="lbl_up">Up</string>
    <string name="lbl_down">Down</string>
    <string name="lbl_image_title">Use your mouth gaiter and take a selfie \n of your teeth as shown in the example image</string>
    <string name="add_at_least_one_image">Please add at least one image</string>
    <string name="format_not_supportted">This format is not supported </string>
    <string name="question1">How Can we help with your smile?</string>
    <string name="ans1">I want to whiten my teeth</string>
    <string name="ans2">I want to straighten my teeth</string>
    <string name="ans3">I want to resolve my pain</string>
    <string name="question2">What Is Your Primary Goal?</string>
    <string name="answer2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero.</string>
    <string name="question3">What Are Your Top Priorities?</string>
    <string name="answer3">Quality Of Care</string>
    <string name="hr_allergies_type1">Amoxicillin/Penicillin</string>
    <string name="hr_allergies_type2">Aspirin</string>
    <string name="hr_allergies_type3">Azithromycin(Zithromax)</string>
    <string name="hr_allergies_type4">Clarithromycin(Biaxin)</string>
    <string name="hr_allergies_type5">Ciprofloxacin</string>
    <string name="hr_allergies_type6">Codeine</string>
    <string name="hr_allergies_type7">Doxycycline</string>
    <string name="hr_allergies_type8">Erythromycin</string>
    <string name="hr_allergies_type9">ibuprofen(Advil, Motrin, Midol)</string>
    <string name="hr_allergies_type10">iodine</string>
    <string name="hr_allergies_type11">lidocaine</string>
    <string name="hr_allergies_type12">morphhine</string>
    <string name="hr_allergies_type13">naproxen(Aleve)</string>
    <string name="hr_allergies_type14">penicillin</string>
    <string name="hr_allergies_type15">oxycodone(Percocet)</string>
    <string name="hr_allergies_type16">Sulfonamide</string>
    <string name="hr_allergies_type17">tetracycline</string>
    <string name="hr_allergies_type18">Other(s)</string>
    <string name="hr_medications_head">Current Medications</string>
    <string name="hr_medications_body">I am not taking any medications</string>
    <string name="hr_medications_yes">Please check any medications you are currently taking</string>
    <string name="hr_medcondition_head">Medical conditions</string>
    <string name="hr_medcondition_body">You have not been diagnosed with any medical conditions</string>
    <string name="hr_medcondition_yes">Please check any medical conditions you have been diagnosed with</string>
    <string name="hr_medcondition_type1">acid reflux</string>
    <string name="hr_medcondition_type2">asthma</string>
    <string name="hr_medcondition_type3">blood clots</string>
    <string name="hr_medcondition_type4">cancer</string>
    <string name="hr_medcondition_type5">coronary artery disease(CAD)</string>
    <string name="hr_medcondition_type6">diabetes</string>
    <string name="hr_medcondition_type7">heart attack</string>
    <string name="hr_medcondition_type8">hypertension</string>
    <string name="hr_medcondition_type9">kidney disease</string>
    <string name="hr_medcondition_type10">stomach ulcer</string>
    <string name="hr_medcondition_type11">stroke</string>
    <string name="hr_medcondition_type12">thyroid disease</string>
    <string name="hr_medcondition_type13">Other(s)</string>
    <string name="hr_medical_procedures_head">Medical procedures</string>
    <string name="hr_medical_procedures_body">You does not have any past medical procedures</string>
    <string name="hr_medical_procedures_yes">Please select which medical procedures you have undergone</string>
    <string name="hr_medical_procedures_type1">angioplasty</string>
    <string name="hr_medical_procedures_type2">appendectomy</string>
    <string name="hr_medical_procedures_type3">back surgery</string>
    <string name="hr_medical_procedures_type4">gallbladder surgery</string>
    <string name="hr_medical_procedures_type5">heart bypass</string>
    <string name="hr_medical_procedures_type6">hernia repair</string>
    <string name="hr_medical_procedures_type7">hip replacement</string>
    <string name="hr_medical_procedures_type8">knee surgery</string>
    <string name="hr_medical_procedures_type9">pacemaker</string>
    <string name="hr_medical_procedures_type10">tonsillectomy</string>
    <string name="hr_medical_procedures_type11">vasectomy</string>
    <string name="hr_medical_procedures_type12">Other(s)</string>
    <string name="hr_member_diagnosed_head">Family medical history</string>
    <string name="hr_member_diagnosed_body">You does not have  any family member diagnosed with any medical conditions</string>
    <string name="hr_member_diagnosed_yes">Please select which conditions a family member has been diagnosed with</string>
    <string name="hr_member_diagnosed_type1">alzheimers</string>
    <string name="hr_member_diagnosed_type2">asthma</string>
    <string name="hr_member_diagnosed_type3">cancer</string>
    <string name="hr_member_diagnosed_type4">coronary artery disease(CAD)</string>
    <string name="hr_member_diagnosed_type5">diabetes</string>
    <string name="hr_member_diagnosed_type6">heart attack</string>
    <string name="hr_member_diagnosed_type7">high cholesterol</string>
    <string name="hr_member_diagnosed_type8">hypertension</string>
    <string name="hr_member_diagnosed_type9">kidney disease</string>
    <string name="hr_member_diagnosed_type10">migraines</string>
    <string name="hr_member_diagnosed_type11">osteoporosis</string>
    <string name="hr_member_diagnosed_type12">stroke</string>
    <string name="hr_member_diagnosed_type13">Other(s)</string>
    <string name="back">Back</string>
    <string name="first_name">First name</string>
    <string name="faq">FAQ</string>
    <string name="terms_amp_policy"><![CDATA[Terms & Policy]]></string>
    <string name="chat_with_office">Chat with office</string>
    <string name="BACK">BACK</string>
    <string name="NEXT">NEXT</string>
</resources>